# rieVAE

./: .gitignore  README.md  pyproject.toml
reviews/: evaluation_v1_Gem31.tex  evaluation_v1_Gem31__response.tex  evaluation_v1_Op46MX.tex  evaluation_v1_Op46MX__response.tex  evaluation_v1_Snn46.tex  evaluation_v1_Snn46__response.tex  evaluation_v1_op46.tex  evaluation_v1_op46__response.tex  unified_action_plan.md
rieVAE/: __init__.py  __main__.py
rieVAE/callbacks/: __init__.py  _certificate_compute.py  certificate_observer.py  multi_gpu_reducer.py  pe_aux_fit.py  post_hoc_calibration.py
rieVAE/configs/: run.yaml
rieVAE/data/: __init__.py  datamodule.py  extra_datamodules.py  preprocessor.py  synthetic.py
rieVAE/evaluate/: __init__.py  certificate.py  isometry.py  latent_distance.py  latent_geometry_report.py  lower_bounds.py
rieVAE/geometry/: __init__.py  anchor_sampler.py  curvature.py  encoder_regularity.py  global_order.py  graph.py  graph_builders.py  log_map.py  positional_encoding.py  properness.py  spectral_premetric.py  strong_convexity.py  topo_graph.py
rieVAE/likelihood/: __init__.py  _base.py  gaussian.py  poisson.py  zinb.py
rieVAE/likelihoods/: __init__.py  bernoulli.py  negative_binomial.py  zinb.py
rieVAE/loggers/: __init__.py
rieVAE/logging/: __init__.py  experiment_logger.py
rieVAE/manifold/: __init__.py  euclidean.py  flat_torus.py  hyperbolic.py  sphere.py  stereographic_product.py
rieVAE/manifolds/: __init__.py  _base.py  (+2 more)
scripts/: train_convergence.py  train_sphere.py  train_torus.py
tests/: test_geometry.py  test_model.py
(+50 files in other folders)
