[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rieVAE"
version = "0.1.0"
description = "Self-Consistent Riemannian Variational Autoencoder"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rieVAE*"]
