[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rieVAE"
version = "0.3.0"
description = "Certified Riemannian Variational Autoencoder via a Spectral Ambient Premetric"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pytorch-lightning>=2.0",
]

[project.optional-dependencies]
hydra = ["hydra-core>=1.3", "omegaconf>=2.3"]
faiss = ["faiss-cpu>=1.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rieVAE*"]

[tool.setuptools.package-data]
rieVAE = ["configs/**/*.yaml"]
